@@ -1008,8 +1008,9 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 nuttx-0.3.11 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Add support for recursive mutexes.
-	* BUGFIX:  Eliminate a memory leak -- contained watchdog instance was not
+	* BUGFIX: Eliminate a memory leak -- contained watchdog instance was not
 	  being deleted with a POSIX timer was deleted.
+	* BUGFIX: Eliminate a deadlock condition in opendir().
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
