@@ -1,7 +1,7 @@
-/************************************************************
+/****************************************************************************
  * fs_inode.c
  *
- *   Copyright (C) 2007 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -14,7 +14,7 @@
  *    notice, this list of conditions and the following disclaimer in
  *    the documentation and/or other materials provided with the
  *    distribution.
- * 3. Neither the name Gregory Nutt nor the names of its contributors may be
+ * 3. Neither the name NuttX nor the names of its contributors may be
  *    used to endorse or promote products derived from this software
  *    without specific prior written permission.
  *
@@ -31,11 +31,11 @@
  * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  *
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Included Files
- ************************************************************/
+ ****************************************************************************/
 
 #include <nuttx/config.h>
 #include <sys/types.h>
@@ -48,29 +48,29 @@
 #include <nuttx/fs.h>
 #include "fs_internal.h"
 
-/************************************************************
+/****************************************************************************
  * Definitions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Variables
- ************************************************************/
+ ****************************************************************************/
 
 static sem_t tree_sem;
 
-/************************************************************
+/****************************************************************************
  * Public Variables
- ************************************************************/
+ ****************************************************************************/
 
 FAR struct inode *root_inode = NULL;
 
-/************************************************************
+/****************************************************************************
  * Private Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Name: _inode_compare
- ************************************************************/
+ ****************************************************************************/
 
 static int _inode_compare(const char *fname,
                           FAR struct inode *node)
@@ -135,18 +135,18 @@ static int _inode_compare(const char *fname,
     }
 }
 
-/************************************************************
+/****************************************************************************
  * Public Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Name: fs_initialize
  *
  * Description:
  *   This is called from the OS initialization logic to configure
  *   the file system.
  *
- ************************************************************/
+ ****************************************************************************/
 
 void fs_initialize(void)
 {
@@ -166,9 +166,9 @@ void fs_initialize(void)
     }
 }
 
-/************************************************************
+/****************************************************************************
  * Name: inode_semtake
- ************************************************************/
+ ****************************************************************************/
 
 void inode_semtake(void)
 {
@@ -184,16 +184,16 @@ void inode_semtake(void)
     }
 }
 
-/************************************************************
+/****************************************************************************
  * Name: inode_semgive
- ************************************************************/
+ ****************************************************************************/
 
 void inode_semgive(void)
 {
    sem_post(&tree_sem);
 }
 
-/************************************************************
+/****************************************************************************
  * Name: inode_search
  *
  * Description:
@@ -203,7 +203,7 @@ void inode_semgive(void)
  * Assumptions:
  *   The caller holds the tree_sem
  *
- ************************************************************/
+ ****************************************************************************/
 
 FAR struct inode *inode_search(const char **path,
                                FAR struct inode **peer,
@@ -299,9 +299,9 @@ FAR struct inode *inode_search(const char **path,
   return node;
 }
 
-/************************************************************
+/****************************************************************************
  * Name: inode_free
- ************************************************************/
+ ****************************************************************************/
 
 void inode_free(FAR struct inode *node)
 {
@@ -313,14 +313,14 @@ void inode_free(FAR struct inode *node)
     }
 }
 
-/************************************************************
+/****************************************************************************
  * Name: inode_nextname
  *
  * Description:
  *   Given a path with node names separated by '/', return
  *   the next node name.
  *
- ************************************************************/
+ ****************************************************************************/
 
 const char *inode_nextname(const char *name)
 {
